[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alphabetic"
version = "0.0.4"
authors = [{name="Oren Halvani"}]
description = "A Python module for querying writing systems of languages, including alphabets, Latin script codes, abjads, abugidas, syllabaries and logographics"
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent", 
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12"
]

dependencies = [
    "dcl==1.0.0"
]

keywords = [
	"alphabet",
	"syllabaries",
	"logographics",
	"alphabet-codes",
	"alphabet-characters",
	"alphabet-letters",
	"alphabet-list"
]

[project.urls]
"Homepage" = "https://github.com/Halvani/alphabetic"
"Bug Tracker" = "https://github.com/Halvani/alphabetic/issues"