[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alphabetic"
version = "0.0.7"
authors = [{name="Oren Halvani"}]
description = "A Python module for retrieving script types of writing systems including alphabets, abjads, abugidas, syllabaries, logographs, featurals as well as Latin script codes"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent", 
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12"
]

dependencies = [
    "dcl==1.0.0",
	"jamo==0.4.1"
]

keywords = ["alphabets", "writing-systems", "iso-639-3", "endangered-languages", "iso-639-2", "alphabet-list", "iso-15924", "syllabaries", "alphabet-characters", "alphabet-database", "logographics", "abjads", "abugidas", "latin-script-codes", "featural", "script-types"]

[project.urls]
"Homepage" = "https://github.com/Halvani/alphabetic"
"Bug Tracker" = "https://github.com/Halvani/alphabetic/issues"